--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cantera (3.0.0-1+focal0) focal; urgency=medium
+
+  * New upstream release
+
+ -- Raymond Speth <speth@mit.edu>  Wed, 23 Aug 2023 08:44:03 -0400
+
 cantera (3.0.0~b1-1+focal0) focal; urgency=medium
 
   * New upstream pre-release
